Changes since Asterisk 1.4-beta was branched:

  * Argument support for Gosub application
  * MailboxExists converted to dialplan function
  * Ability to set process limits without restarting Asterisk
  * SS7 support in chan_zap (via libss7 library)
  * Proper codec support in chan_skinny.
  * AEL upgraded to use the Gosub with Arguments instead
     of Macro application, to hopefully reduce the problems
     seen with the artificially low stack ceiling that 
     Macro bumps into. Macros can only call other Macros
     to a depth of 7. Tests run using gosub, show depths
     limited only by virtual memory. A small test demonstrated
     recursive call depths of 100,000 without problems.
  * Ability to use libcap to set high ToS bits when non-root
     on Linux. If configure is unable to find libcap then you
     can use --with-cap to specify the path.
  * H323 remote hold notification support added (by NOTIFY message
     and/or H.450 supplementary service)
  * Added keepstats option to queues.conf which will keep queue
     statistics during a reload.
  * Added rotatetimestamp option to logger.conf which will use
     the time to name the logger files instead of sequence number.
  * The output of CallerID in Manager events is now more consistent.
     CallerIDNum is used for number and CallerIDName for name.
  * setinterfacevar option in queues.conf also now sets a variable
     called MEMBERNAME which contains the member's name.
  * Added Masquerade manager event for when a masquerade happens between
     two channels.
  * Added 'Strategy' field to manager event QueueParams which represents
     the queue strategy in use. 